style: fix click-through behind dialogs

--- a/source/ui/directives/dialogView.less
+++ b/source/ui/directives/dialogView.less
@@ -2,10 +2,12 @@
 // --------------------------------------------------------------------------
 .dialog-view {
   text-align: center;
+  pointer-events:none !important;
   .container {
     width:100%;
   }
   .dialog {
+    pointer-events:auto !important;
     width:auto;
     max-width: 800px;
     margin-top:15px;
