--- a/source/ui/index.less
+++ b/source/ui/index.less
@@ -275,8 +275,10 @@ canvas {
   bottom:0;
   overflow-y:auto;
   pointer-events:none;
-  > * {
+  .ebp {
     pointer-events:auto;
+  }
+  > * {
     display: block;
     height:100%;
     overflow-y:auto;
